# python-vcr-tests

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  push.yml
src/keboola/vcr/: __init__.py  db_recorder.py  log_capture.py  recorder.py  sanitizers.py  scaffolder.py  validator.py
tests/: conftest.py  test_db_recorder.py  test_recorder.py  test_sanitizers.py  test_scaffolder.py  test_validator.py
