[project]
name = "keboola.vcr"
version = "0.0.0"
description = "VCR recording, sanitization, and validation for Keboola component HTTP interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "vcrpy>=8.1.1,<9",  # cassette._save and cassette.append are private API we depend on
    "freezegun>=1.5.5,<2",
]

[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "keboola.vcr"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/keboola/python-vcr-tests"
Repository = "https://github.com/keboola/python-vcr-tests"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
